add  payment gateway service ,form , blog,testimonial, blog

--- a/website/src/app/globals.css
+++ b/website/src/app/globals.css
@@ -2,3 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .swiper-slide-active .slider-item {
+    @apply opacity-100;
+  }
+}
