--- a/website/src/styles/style.scss
+++ b/website/src/styles/style.scss
@@ -1,12 +1,12 @@
 @use 'icons/style.css';
 @use 'global.scss';
-@use 'header.scss';
-@use 'footer.scss';
-@use 'slider.scss';
+@use 'header.css';
+@use 'footer.css';
+@use 'slider.css';
 @use 'pagination.scss';
 @use 'modal.scss';
 @use 'text-has-line-before.scss';
-@use 'section/about.scss';
+@use 'section/about.css';
 @use 'section/payment-gateway.scss';
 @use 'section/blog-list.scss';
 @use 'section/list-partner.scss';
